engine/grafbase-engine/src/registry/resolvers/graphql/snapshots/grafbase_engine__registry__resolvers__graphql__serializer__tests__base_fields@query { foo }.snap
---
source: common/grafbase_engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	foo
}

