engine/grafbase-engine/src/registry/resolvers/graphql/snapshots/grafbase_engine__registry__resolvers__graphql__serializer__tests__complex.snap
---
source: common/grafbase_engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	repository(name: "api", owner: "grafbase") {
		__typename
		issueOrPullRequest(number: 2129) {
			__typename
			... on Issue {
				__typename
				id
			}
			... on PullRequest {
				__typename
				id
				changedFiles
			}
		}

	}

}

